--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".Pop"
+        <activity android:name=".PopWindow"
             android:theme="@style/AppTheme.CustomTheme">
         </activity>
     </application>
